--- a/ppcasm_cs/ppcasm_cs.csproj
+++ b/ppcasm_cs/ppcasm_cs.csproj
@@ -1,137 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7B05604-9633-4E57-9FD3-1E6F5956B0F6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ppcasm_cs</RootNamespace>
-    <AssemblyName>ppcasm_cs</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="PPC_Commands\ADDC.cs" />
-    <Compile Include="PPC_Commands\AND.cs" />
-    <Compile Include="PPC_Commands\ANDIS.cs" />
-    <Compile Include="PPC_Commands\ANDI.cs" />
-    <Compile Include="PPC_Commands\ADDIC_DOT.cs" />
-    <Compile Include="PPC_Commands\ADDIC.cs" />
-    <Compile Include="PPC_Commands\BGT.cs" />
-    <Compile Include="PPC_Commands\BEQ.cs" />
-    <Compile Include="PPC_Commands\BSO.cs" />
-    <Compile Include="PPC_Commands\BNS.cs" />
-    <Compile Include="PPC_Commands\BNE.cs" />
-    <Compile Include="PPC_Commands\BLE.cs" />
-    <Compile Include="PPC_Commands\BLT.cs" />
-    <Compile Include="PPC_Commands\BGE.cs" />
-    <Compile Include="PPC_Commands\BC.cs" />
-    <Compile Include="PPC_Commands\CNTLZW.cs" />
-    <Compile Include="PPC_Commands\FMSUBS.cs" />
-    <Compile Include="PPC_Commands\FNMSUBS.cs" />
-    <Compile Include="PPC_Commands\FDIVS.cs" />
-    <Compile Include="PPC_Commands\FCMPU.cs" />
-    <Compile Include="PPC_Commands\MFLR.cs" />
-    <Compile Include="PPC_Commands\MR.cs" />
-    <Compile Include="PPC_Commands\XOR.cs" />
-    <Compile Include="PPC_Commands\RLWIMI_DOT.cs" />
-    <Compile Include="PPC_Commands\RLWIMI.cs" />
-    <Compile Include="PPC_Commands\RLWINM_DOT.cs" />
-    <Compile Include="PPC_Commands\STDU.cs" />
-    <Compile Include="PPC_Commands\STFD.cs" />
-    <Compile Include="PPC_Commands\STFSU.cs" />
-    <Compile Include="PPC_Commands\LFSU.cs" />
-    <Compile Include="PPC_Commands\LHAU.cs" />
-    <Compile Include="PPC_Commands\LHZU.cs" />
-    <Compile Include="PPC_Commands\LBZU.cs" />
-    <Compile Include="PPC_Commands\MTLR.cs" />
-    <Compile Include="PPC_Commands\FMR.cs" />
-    <Compile Include="PPC_Commands\FNEG.cs" />
-    <Compile Include="PPC_Commands\NOR.cs" />
-    <Compile Include="PPC_Commands\OR.cs" />
-    <Compile Include="PPC_Commands\LHA.cs" />
-    <Compile Include="PPC_Commands\FSUBS.cs" />
-    <Compile Include="PPC_Commands\STBU.cs" />
-    <Compile Include="PPC_Commands\STHU.cs" />
-    <Compile Include="PPC_Commands\ADDFIC.cs" />
-    <Compile Include="PPC_Commands\SUBFIC.cs" />
-    <Compile Include="PPC_Commands\XORI.cs" />
-    <Compile Include="PPC_Commands\XORIS.cs" />
-    <Compile Include="PPC_Commands\ORIS.cs" />
-    <Compile Include="PPC_Commands\ORI.cs" />
-    <Compile Include="PPC_Commands\ADDIS.cs" />
-    <Compile Include="PPC_Commands\LHZ.cs" />
-    <Compile Include="PPC_Commands\LBZ.cs" />
-    <Compile Include="PPC_Commands\STB.cs" />
-    <Compile Include="PPC_Commands\STFS.cs" />
-    <Compile Include="PPC_Commands\STH.cs" />
-    <Compile Include="PPC_Commands\SUB.cs" />
-    <Compile Include="PPC_Commands\ADD.cs" />
-    <Compile Include="PPC_Commands\SUBF.cs" />
-    <Compile Include="PPC_Commands\SUBIS.cs" />
-    <Compile Include="PPC_Commands\SUBI.cs" />
-    <Compile Include="PPC_Commands\BL.cs" />
-    <Compile Include="PPC_Commands\B.cs" />
-    <Compile Include="PPC_Commands\BCTRL.cs" />
-    <Compile Include="PPC_Commands\CMPWI.cs" />
-    <Compile Include="PPC_Commands\CMPLWI.cs" />
-    <Compile Include="PPC_Commands\CMPW.cs" />
-    <Compile Include="PPC_Commands\CMPLW.cs" />
-    <Compile Include="PPC_Commands\LFSX.cs" />
-    <Compile Include="PPC_Commands\LFS.cs" />
-    <Compile Include="PPC_Commands\ADDI.cs" />
-    <Compile Include="PPC_Commands\STWX.cs" />
-    <Compile Include="PPC_Commands\RLWINM.cs" />
-    <Compile Include="PPC_Commands\STWU.cs" />
-    <Compile Include="PPC_Commands\STW.cs" />
-    <Compile Include="PPC_Commands\LWZU.cs" />
-    <Compile Include="PPC_Commands\LWZX.cs" />
-    <Compile Include="PPC_Commands\LWZ.cs" />
-    <Compile Include="PPC_Commands\LIS.cs" />
-    <Compile Include="PPC_Commands\LI.cs" />
-    <Compile Include="PPC_Commands\BLR.cs" />
-    <Compile Include="PPC_Commands\NOP.cs" />
-    <Compile Include="PPCASM.cs" />
-    <Compile Include="PPC_Command.cs" />
-    <Compile Include="PPC_DataTypes\Long.cs" />
-    <Compile Include="PPC_DataTypes\Unicode.cs" />
-    <Compile Include="PPC_DataTypes\Ascii.cs" />
-    <Compile Include="PPC_Instruction.cs" />
-    <Compile Include="PPC_DataType.cs" />
-    <Compile Include="PPC_DataTypes\Float64.cs" />
-    <Compile Include="PPC_DataTypes\Float32.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
